<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="date"
            type="String" />
        <variable
            name="previousDate"
            type="String" />
        <variable
            name="timestamp"
            type="String" />
        <variable
            name="result"
            type="Double" />
        <variable
            name="converter"
            type="com.lentatyka.focusstartproject.domain.network.model.Rate" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.MainActivity"
        android:background="@color/pig_one"
        android:layout_margin="8dp">

        <RelativeLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/actual_date"
                tools:text="Date" />

            <TextView
                android:id="@+id/tv_previous_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_date"
                android:layout_alignStart="@id/tv_date"
                android:layout_marginTop="8dp"
                android:text="@string/previous_date"
                tools:text="DatePrev" />

            <TextView
                android:id="@+id/tv_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_previous_date"
                android:layout_alignStart="@id/tv_date"
                android:layout_marginTop="8dp"
                android:text="@string/timestamp_date"
                tools:text="DateTS" />

            <TextView
                android:id="@+id/tv_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_timestamp"
                android:layout_alignStart="@id/tv_date"
                android:text="@string/auto_update"
                android:layout_marginTop="8dp"
                tools:text="Auto update"
                />

            <TextView
                android:id="@+id/tv_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_date"
                android:layout_alignParentEnd="true"
                app:defaultValue="@{@string/default_date}"
                app:mainValue="@{date}"
                tools:text="00:00" />
            <TextView
                android:id="@+id/tv_previous_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_previous_date"
                android:layout_alignParentEnd="true"
                app:mainValue="@{previousDate}"
                app:defaultValue="@{@string/default_date}"
                tools:text="00:00"
                />
            <TextView
                android:id="@+id/tv_timestamp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_timestamp"
                android:layout_alignParentEnd="true"
                app:mainValue="@{timestamp}"
                app:defaultValue="@{@string/default_date}"
                tools:text="00:00"
                />

            <CheckBox
                android:id="@+id/chb_auto_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_check_box"
                android:layout_alignParentEnd="true"
                android:buttonTint="@color/pig_three" />
        </RelativeLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@+id/date_layout"
            app:layout_constraintBottom_toTopOf="@+id/converter_layout">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/rate_item" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <RelativeLayout
            android:id="@+id/converter_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:padding="4dp"
            app:layout_constraintTop_toBottomOf="@+id/swipeLayout"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/et_value"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:autofillHints="1"
                android:backgroundTint="@color/pig_three"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:maxLines="1" />

            <TextView
                android:id="@+id/tv_default_char_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/et_value"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/et_value"
                android:text="@string/default_rate_char_code"
                tools:text="RUB" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/et_value"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@id/tv_char_code"
                app:resultValue="@{result}"
                tools:text="100500" />

            <TextView
                android:id="@+id/tv_char_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/et_value"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                app:defaultValue="@{@string/default_rate_char_code}"
                app:mainValue="@{converter.charCode}"
                tools:text="AUD" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>