<resources>
    <string name="app_name">FocusStartProject</string>
    <string name="auto_update">Auto update</string>
    <string name="actual_date">Date</string>
    <string name="previous_date">Previous date</string>
    <string name="timestamp_date">Timestamp</string>
    <string name="char_code">-> %s</string>
    <string name="item_nominal">Nominal: %d</string>
    <string name="item_actual">Actual: %1$.4f</string>
    <string name="item_previous">Previous: %1$.4f</string>
    <string name="default_date">00:00:00</string>
    <string name="default_rate_char_code">RUB</string>
    <string name="result">%.4f</string>
</resources>